--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             height: 100vh;
             text-align: center;
             color: white;
-            overflow: hidden;
+            overflow-y: auto;
+            overflow-x: hidden;
         }
 
         .container {
@@ -211,8 +212,8 @@
         <div class="question" id="question">Will you be mine forever? ❤️😘</div>
 
         <div class="buttons">
-            <button id="btnYes" onclick="showGallery()">Haan Ji Yes!</button>
-            <button id="btnNo" onmousemove="moveButton()">Nahi... No</button>
+            <button id="btnYes" onclick="showGallery()">Haan</button>
+            <button id="btnNo" onmousemove="moveButton()">Naa</button>
         </div>
 
         <div class="gallery-section" id="gallerySection">
@@ -234,8 +235,17 @@
                 <button class="btn" id="next">Next</button>
             </div>
             <div class="message-box" id="messageBox">
-                <p class="message">Meri jaan, tum mere liye sab kuch ho... ❤️</p>
-                <button class="btn" id="okButton" onclick="playVideo()">Theek Hai, OK</button>
+                <p class="message">To meri darling, meri zindagi, meri khushi, meri muskurahat, meri duniya, meri sab kuch<br><br>
+                    Happy Birthday My Darling 💖<br><br>
+
+                    Aaj ka din sirf tumhare liye hai aur main jitne bhi shabdon ka use karun, wo kabhi bhi ye nahi bata sakte ki main tumhare liye kitna thankful hoon. Jab se tum meri zindagi mein aayi ho sab kuch aur bhi roshan ho gaya hai har pal khubsurat lagta hai. Tumhari muskaan meri favourite view hai tumhari awaaz meri favourite melody hai aur tumhari baahon mein hi mera asli ghar hai 🫂<br>
+                    <br>
+                    Humne saath mein hasa hai roya hai kabhi kabhi lada bhi hai aur har baar pyaar aur gehra ho gaya hai. Kabhi kabhi hum galtiyan karte hain lekin har chhoti moti ladayi mujhe sirf ye yaad dilati hai ki main tumhe kabhi khona nahi chahta. Mujhe bade moments nahi chahiye ye samajhne ke liye ki main tumse kitna pyaar karta hoon bas wo chhoti chhoti baatein kaafi hain tumhari aankhon ki chamak jab roshni padti hai tumhara haath mere haath mein aur tumhare paas hone ka sukoon<br>
+                    <br>
+                    Aaj tumhare is khaas din par main sirf itna kehna chahta hoon thank you meri zindagi banne ke liye. Tum woh ho jiske saath main har birthday har sapna aur apna har kal bitana chahta hoon. Mujhe poori ummeed hai ki tumhara ye din utna hi khoobsurat aur magical hoga jitni tum mere liye ho
+                    <br><br>
+                    Main tumse bepanah mohabbat karta hoon My Darling 🥰🎂🎈💘</p>
+                <button class="btn" id="okButton" onclick="playVideo()">Acha ji </button>
             </div>
         </div>
         
