--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         }
 
         body {
+            margin-top: 50px;
             background: black;
             font-family: Arial, sans-serif;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             text-align: center;
             color: white;
             overflow-y: auto;
