--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     <br>
                     Aaj tumhare is khaas din par main sirf itna kehna chahta hoon thank you meri zindagi banne ke liye. Tum woh ho jiske saath main har birthday har sapna aur apna har kal bitana chahta hoon. Mujhe poori ummeed hai ki tumhara ye din utna hi khoobsurat aur magical hoga jitni tum mere liye ho
                     <br><br>
-                    Main tumse bepanah mohabbat karta hoon My Darling 🥰🎂🎈💘</p>
+                    Main tumse bepanah mohabbat karta hoon My Darling 🥰🎂🎈💘<br><br></p>
                 <button class="btn" id="okButton" onclick="playVideo()">Acha ji </button>
             </div>
         </div>
